dist_man1_MANS=

if BUILD_NULLIOND
  dist_man1_MANS+=nulliond.1
endif

if ENABLE_QT
  dist_man1_MANS+=nullion-qt.1
endif

if BUILD_NULLION_CLI
  dist_man1_MANS+=nullion-cli.1
endif

if BUILD_NULLION_TX
  dist_man1_MANS+=nullion-tx.1
endif

if BUILD_NULLION_UTIL
  dist_man1_MANS+=nullion-util.1
endif

if ENABLE_WALLET
if BUILD_NULLION_WALLET
  dist_man1_MANS+=nullion-wallet.1
endif
endif
